update subscription fee and some fixes